--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   image_picker: ^1.1.0
   infinite_scroll_pagination: ^4.1.0
   injectable: ^2.5.0
-  intl: ^0.19.0
+  intl: any
   local_auth: ^2.0.0
   open_file: ^3.5.0
   package_info_plus: ^8.0.0
@@ -42,7 +42,7 @@ dependencies:
   plugin_platform_interface: ^2.0.0
   reactive_forms: ^17.0.0
   sign_in_with_apple: ^6.0.0
-  supa_carbon_icons: ^0.0.1+6
+  supa_carbon_icons: ^0.2.0
   url_launcher: ^6.0.0
   web: ^1.0.0
 
