--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   injectable: ^2.5.1
   intl: any
   local_auth: ^2.3.0
-  open_file: ^3.5.10
+  open_filex: ^4.7.0
   package_info_plus: ^8.3.1
   path: ^1.9.0
   path_provider: ^2.1.5
