--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -29,6 +29,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   go_router: ^15.1.3
+  flutter_dotenv: ^5.2.1
+  flutter_bloc: ^9.1.1
+  firebase_core: ^4.3.0
+  firebase_crashlytics: ^5.0.6
+  firebase_messaging: ^16.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   integration_test:
@@ -54,7 +61,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
